Closed Bug 1675908 Opened 5 years ago Closed 5 years ago

linux64 perf_reftest_singletons scrollbar-styles-1.html regression 2020-10-12

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

https://bugzilla.mozilla.org/show_bug.cgi?id=1554850#c22 reports a regression in scrollbar-styles-1.html.

The autoland graph is not so helpful identifying the regressing changeset because the linux64-shippable builds are not deterministic, and so two shippable builds are not necessarily directly comparable. Multiple builds from the same source code may give different results. AIUI there are no other linux64 build options with talos support on try. With respect to scrollbar-styles-1.html, however, it seems there are two common builds produced, which I'll call "fast" and "slow" builds. I assume slow builds from one changeset may be compared against slow builds from another changeset. The bimodality in bloom-basic.html is extreme across two builds on the same code, so I'll ignore that.

This regression from changeset d85aaf27109c is detected in both fast and slow builds.

Skipping both gdk_screen_get_default() and gtk_settings_get_for_screen() reduces the regression, but does not restore to previous results for when comparing fast builds builds. (I don't have a slow build with this optimization.)

Caching the dpi and invalidating on "resolution" notifications removes the regression in scrollbar-styles-1.html for fast and slow builds.

This was removed in https://hg.mozilla.org/mozilla-central/rev/d85aaf27109c
but that led to a regression in
perf_reftest_singletons scrollbar-styles-1.html.

When reducing dpi from a larger value at Firefox startup, the hamburger menu
drop-down was limited in size unnecessarily because Firefox still had the
initial concept of screen size. This derived from the use of
gfxPlatformGtk::GetFontScaleFactor() in initializing screen data.
https://searchfox.org/mozilla-central/rev/8b7aa8af652f87d39349067a5bc9c0256bf6dedc/widget/gtk/ScreenHelperGTK.cpp#151.

A RefreshScreens() on resolution change resolves that.

Depends on D96306

I have applied both patches and everything looks fine for me!

Set release status flags based on info from the regressing bug 1554850

Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f9ea8ab6f473 restore cache for GetFontScaleDPI() r=stransky https://hg.mozilla.org/integration/autoland/rev/bbcbf95ea2b5 refresh cached screens on resolution change r=stransky

Shouldn't this land on 83 instead?

(In reply to Vincent Bernat from comment #8)

Shouldn't this land on 83 instead?

Almost everything lands on m-c first, because it will be needed for future versions, and that also provides some opportunity for potential issues to show up.

Regressions are typically considered for uplift to other branches.
This close to the 83 release, however, I don't think the benefit observed in only one subtest is worth the risk of such a late uplift.

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: