Bug 1675908 restore cache for GetFontScaleDPI() r=stransky

This was removed in https://hg.mozilla.org/mozilla-central/rev/d85aaf27109c
but that led to a regression in
perf_reftest_singletons scrollbar-styles-1.html.

Differential Revision: https://phabricator.services.mozilla.com/D96306